[package]
name = "skyport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
clap = { version = "4.3.11", features = ["derive"] }
influxdb = { version = "0.7.0", features = ["derive"] }
poem = "1.3.56"
poem-openapi = { version = "2.0.27", features = ["chrono","swagger-ui", "redoc", "uuid", "email"]}
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
tokio-postgres = "0.7.9"
uuid = { version = "1.4.1", features = ["serde"] }
